integration testing is almost set up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,13 @@ logging.level.web=WARN
 logging.level.root=OFF
 logging.level.org.springframework.boot=OFF
 
-server.port=8080
 #mongodb+srv//username:password@host:port/database
-spring.data.mongodb.uri=mongodb://localhost:27017/localRestApiTest
+#spring.data.mongodb.uri=mongodb://localhost:27017/
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=IntegrationRestApi
+#spring.data.mongodb.database=localRestApiTest
 
 #spring.data.mongodb.uri=mongodb+srv://cooluser:nastymcmongopass123@cluster0-lu2tf.mongodb.net/test?retryWrites=true&w=majority
 
