--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 # suppress inspection "UnusedProperty" for whole file
 #https://stackoverflow.com/questions/33869606/intellij-15-springboot-devtools-livereload-not-working
 
-logging.level.web=WARN
-logging.level.root=OFF
-logging.level.org.springframework.boot=OFF
+#logging.level.web=WARN
+logging.level.web=DEBUG
+#logging.level.root=OFF
+#logging.level.org.springframework.boot=OFF
+logging.level=DEBUG
 
 #mongodb+srv//username:password@host:port/database
 #spring.data.mongodb.uri=mongodb://localhost:27017/
