--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # suppress inspection "UnusedProperty" for whole file
 #https://stackoverflow.com/questions/33869606/intellij-15-springboot-devtools-livereload-not-working
 
+
+spring.main.lazy-initialization=true
+
 #logging.level.web=WARN
 logging.level.web=DEBUG
 #logging.level.root=OFF
