post w/ form working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,19 @@
 
 
 spring.main.lazy-initialization=true
-
-#logging.level.web=WARN
-logging.level.web=DEBUG
-#logging.level.root=OFF
+####    DEBUG
+####    INFO    <--default
+####    WARN
+####    ERROR
+####    FATAL
+####    OFF
+####    TRACE
+logging.level.web=WARN
+# http://logback.qos.ch/manual/layouts.html#conversionWord
+#logging.pattern.console = %d{HH:mm:ss} --- %7.7level | %msg%n | %method | %logger{0} | %t
+logging.pattern.console= %d{HH:mm:ss} | %-5level | %-18.-18logger{0} | %msg %n 
+#logging.level.root=OFF     #EVERY GETS TURNED OFF
 #logging.level.org.springframework.boot=OFF
-logging.level=DEBUG
 
 #mongodb+srv//username:password@host:port/database
 #spring.data.mongodb.uri=mongodb://localhost:27017/
