working on server auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,10 @@ spring.main.lazy-initialization=true
 ####    FATAL
 ####    OFF
 ####    TRACE
-logging.level.web=WARN
+logging.level.web=DEBUG
+#com.Brodski.restApi.
+logging.level.com.Brodski.restApi.ws.server.MessageTracing.sent=TRACE
+logging.level.com.Brodski.restApi.server.MessageTracing.sent=TRACE
 # http://logback.qos.ch/manual/layouts.html#conversionWord
 #logging.pattern.console = %d{HH:mm:ss} --- %7.7level | %msg%n | %method | %logger{0} | %t
 logging.pattern.console= %d{HH:mm:ss} | %-5level | %-18.-18logger{0} | %msg %n 
