--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
 
 		<!--- Google stuff -->
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.10</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
