--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ logging.pattern.console= %d{HH:mm:ss} | %-5level | %-18.-18logger{0} | %msg %n
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=IntegrationRestApi
+spring.data.mongodb.database=YtUsers
 #spring.data.mongodb.database=localRestApiTest
 
 #spring.data.mongodb.uri=mongodb+srv://cooluser:nastymcmongopass123@cluster0-lu2tf.mongodb.net/test?retryWrites=true&w=majority
