--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.main.lazy-initialization=true
 ####    TRACE
 logging.level.web=DEBUG
 #com.Brodski.restApi.
-server.port=80
+#server.port=41479
 logging.level.com.Brodski.restApi.ws.server.MessageTracing.sent=TRACE
 logging.level.com.Brodski.restApi.server.MessageTracing.sent=TRACE
 # http://logback.qos.ch/manual/layouts.html#conversionWord
