--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,8 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=YtUsers
 
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
 endpoints.shutdown.enabled=true
 #spring.data.mongodb.database=localRestApiTest
 
