--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,9 +28,14 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=YtUsers
 
-management.endpoints.web.exposure.include=*
-management.endpoint.shutdown.enabled=true
-endpoints.shutdown.enabled=true
+#shut down
+#https://www.baeldung.com/spring-boot-shutdown
+#curl -X POST localhost:8080/actuator/shutdown
+#management.endpoints.web.exposure.include=*
+#management.endpoint.shutdown.enabled=true
+#endpoints.shutdown.enabled=true
+
+
 #spring.data.mongodb.database=localRestApiTest
 
 #spring.data.mongodb.uri=mongodb+srv://cooluser:nastymcmongopass123@cluster0-lu2tf.mongodb.net/test?retryWrites=true&w=majority
