--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-# suppress inspection "UnusedProperty" for whole file
-#https://stackoverflow.com/questions/33869606/intellij-15-springboot-devtools-livereload-not-working
+# App properties
 
-
-spring.main.lazy-initialization=true
 ####    DEBUG
 ####    INFO    <--default
 ####    WARN
@@ -10,20 +7,18 @@ spring.main.lazy-initialization=true
 ####    FATAL
 ####    OFF
 ####    TRACE
-logging.level.web=DEBUG
-#com.Brodski.restApi.
-#server.port=41479
+
+logging.level.web=INFO
+
 logging.level.com.Brodski.restApi.ws.server.MessageTracing.sent=TRACE
 logging.level.com.Brodski.restApi.server.MessageTracing.sent=TRACE
-# http://logback.qos.ch/manual/layouts.html#conversionWord
-#logging.pattern.console = %d{HH:mm:ss} --- %7.7level | %msg%n | %method | %logger{0} | %t
+
 logging.pattern.console= %d{HH:mm:ss} | %-5level | %-18.-18logger{0} | %msg %n 
-#logging.level.root=OFF     #EVERY GETS TURNED OFF
+#logging.level.root=OFF     #EVERYTHING GETS TURNED OFF
 #logging.level.org.springframework.boot=OFF
 
-#mongodb+srv//username:password@host:port/database
-#spring.data.mongodb.uri=mongodb://localhost:27017/
-
+spring.main.lazy-initialization=true
+#spring.data.mongodb.uri=mongodb+srv://cooluser:nastymcmongopass123@cluster0-lu2tf.mongodb.net/test?retryWrites=true&w=majority
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=YtUsers
@@ -34,11 +29,3 @@ spring.data.mongodb.database=YtUsers
 #management.endpoints.web.exposure.include=*
 #management.endpoint.shutdown.enabled=true
 #endpoints.shutdown.enabled=true
-
-
-#spring.data.mongodb.database=localRestApiTest
-
-#spring.data.mongodb.uri=mongodb+srv://cooluser:nastymcmongopass123@cluster0-lu2tf.mongodb.net/test?retryWrites=true&w=majority
-
-#spring.devtools.restart.trigger-file = HelloWorld.java
-#spring.devtools.restart.additional-paths=.
