--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,15 @@
 
 logging.level.web=INFO
 
+server.port=8080
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=springCert
+
+# blocks all http (allowing only https)
+# security.require-ssl=true
+
 logging.level.com.Brodski.restApi.ws.server.MessageTracing.sent=TRACE
 logging.level.com.Brodski.restApi.server.MessageTracing.sent=TRACE
 
