--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,15 @@
 ####    OFF
 ####    TRACE
 
-logging.level.web=INFO
+logging.level.web=DEBUG
+debug=true
 
-server.port=8080
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:keystore.p12
+server.port=8443
+server.ssl.key-store-type=JKS
+server.ssl.key-store=classpath:keystore.jks
 server.ssl.key-store-password=password
-server.ssl.key-alias=springCert
-
+server.ssl.key-alias=springcert
+server.use-forward-headers=true
 # blocks all http (allowing only https)
 # security.require-ssl=true
 
