--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ debug=true
 
 server.port=8080
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=/home/cbrodski/restApi/src/main/resources/keystore.p12      classpath:keystore.jks
+server.ssl.key-store=/home/cbrodski/restApi/src/main/resources/keystore.p12
 server.ssl.key-store-password=password
 server.ssl.key-alias=tomcat
 server.use-forward-headers=true
