--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,14 @@
 logging.level.web=DEBUG
 debug=true
 
-server.port=8080
+#implies (sort of) that it's ssl
+server.port=8443
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=/home/cbrodski/restApi/src/main/resources/keystore.p12
 server.ssl.key-store-password=password
 server.ssl.key-alias=tomcat
 server.use-forward-headers=true
+
 # blocks all http (allowing only https)
 # security.require-ssl=true
 
