--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,16 +8,19 @@
 ####    OFF
 ####    TRACE
 
+spring.profiles.active=dev
+
 logging.level.web=DEBUG
-debug=true
+# debug=true
 
 #implies (sort of) that it's ssl
-server.port=8443
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=/home/cbrodski/restApi/src/main/resources/keystore.p12
-server.ssl.key-store-password=password
-server.ssl.key-alias=tomcat
-server.use-forward-headers=true
+#server.port=8443
+#server.ssl.enable=false
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-password=password
+#server.ssl.key-alias=tomcat
+#server.use-forward-headers=true
 
 # blocks all http (allowing only https)
 # security.require-ssl=true
