--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 
 spring.profiles.active=prod
 
-logging.level.web=DEBUG
+logging.level.web=INFO
 # debug=true
 
 #implies (sort of) that it's ssl
