--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 ####    OFF
 ####    TRACE
 
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 logging.level.web=INFO
 logging.level.com.Brodski.restApi.ws.server.MessageTracing.sent=TRACE
