--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,11 @@
 ####    OFF
 ####    TRACE
 
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 logging.level.web=INFO
-logging.level.com.Brodski.restApi.ws.server.MessageTracing.sent=TRACE
-logging.level.com.Brodski.restApi.server.MessageTracing.sent=TRACE
+logging.level.com.Brodski.restApi.ws.server.MessageTracing.sent=ERROR
+logging.level.com.Brodski.restApi.server.MessageTracing.sent=ERROR
 
 logging.pattern.console= %d{HH:mm:ss} | %-5level | %-18.-18logger{0} | %msg %n 
 #logging.level.root=OFF     #EVERYTHING GETS TURNED OFF
